test/good/nullables/nullable11.px

func f(x: [{String?}?]): [{String?}?]? def
    return x.empty ? null : x

s = "abc"
print f([{s}, {null}]) ?? []
print f([])?.pop()
