test/bad/functions/call11.px

func f(s: String): Void def
    return

f("", s = "")
